# pico_ota

./: CMakeLists.txt  analog_reader.c  build.sh  common.c  common.h  lwipopts.h  main.c  md5.c  pico_sleep.c  pico_wifi.c  prestamp.sh  project.h  stamp.sh  timestamp.h  version.h  wifi.c  wifi.h
